# Pipoca

./: .gitattributes  .gitignore  .npmrc  README.md  ar.liber.nyx.GnomeTsTemplate.json  env.d.ts  eslint.config.js  generated-sources.json  io.github.tduarte.Pipoca.json  io.github.tduarte.Pipoca.metainfo.xml  meson.build  meson_options.txt  package-lock.json  package.json  prettier.config.js  test-subtitle.srt  tsconfig.esbuild.json  tsconfig.json
.cursor/rules/: libadwaita.mdc
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  flatpak-multiarch.yml  flatpak-sandbox.yml  flatpak.yml  test.yml
data/: ar.liber.nyx.GnomeTsTemplate.desktop.in  ar.liber.nyx.GnomeTsTemplate.service.in  io.github.tduarte.Pipoca.desktop.in  io.github.tduarte.Pipoca.gresource.xml.in  io.github.tduarte.Pipoca.gschema.xml.in  io.github.tduarte.Pipoca.metainfo.xml.in.in  meson.build
data/gtk/: help-overlay.ui
scripts/: esbuild.js  update-sources.sh
src/: app.ts  main-window.ts  main-window.ui  translator.ts
